--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
-Mishak Nwakpa <>
+Mishak Nwakpa <meshaqrapha@gmail.com>
 
 Daniel Eze <edycram4u@gmail.com>
